• Fixed icons grid for filtersexplainer • Used Grid to align main screenshot on bigger breakpoints

--- a/css/main.css
+++ b/css/main.css
@@ -139,15 +139,14 @@ main {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 100%;
+    flex
   }
   
   .column {
     display: flex;
     flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
-    height: 130px
+    height: 130px;
+    width: 50%;
   }
   
 ul {
@@ -200,7 +199,7 @@ footer li {
 }
 
 /* First breakpoint (iPhone 6/7/8/X/12) */
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 450px) {
     h1 {
         font-size: 1.6em;
         margin: 10px 10px;
@@ -212,6 +211,10 @@ footer li {
         max-width: 400px;
     }
 
+    .column {
+        width: 33%;
+    }
+
     p.subtext {
         margin: 25px 10px;
     }
@@ -221,17 +224,41 @@ footer li {
 
 /* Second breakpoint (iPad Portrait +) */
 
-  @media only screen and (min-width: 500px) {
-      .FAQ {
+@media only screen and (min-width: 550px) {
+    .column {
+         width: 25%;
+    }
+
+    .FAQ {
           display: block;
           max-width: 550px;
           margin: auto;
-      }
+    }
 
-      p {
-          max-width: 550px;
-      }
+    p {
+      max-width: 550px;
+    }
+
+    section {
+        margin: 125px 125px
+    }
   }
 
-  /* Notes: 
-  For any bigger breakpoints make sure to put more flexbox columns in one row */ 
+@media only screen and (min-width: 550px) {
+    .hero {
+        display: grid;
+        grid-template-columns: 70% 30%;
+    }
+
+    .main_screenshot {
+        width: 250px;
+        margin: 25px auto;
+    }
+
+    .appstore-buttons {
+        max-width: 400px;  
+    }
+    
+    .store-button-google {
+        padding-left: 10px;
+  }
